--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "inhopj",
   "license": "MIT",
   "repository": "inhopj/nfc",
-  "peerDependencies": {
-    "react": "^18.2.0"
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "rollup": "^2.75.7",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   }
 }
