--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@types/react": "^18.0.14",
     "react": "^18.2.0",
     "rollup": "^2.75.7",
     "tslib": "^2.4.0",
