--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/index.es.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "rollup -c -w",
     "build": "rollup -c && tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist"
   },
   "keywords": [],
