--- a/playground/package.json
+++ b/playground/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "inhopj",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react-dom": "^18.2.0"
+  }
 }
