--- a/playground/package.json
+++ b/playground/package.json
@@ -10,6 +10,7 @@
   "author": "inhopj",
   "license": "ISC",
   "dependencies": {
-    "react-dom": "^18.2.0"
+    "react": "file:../node_modules/react",
+    "react-dom": "file:../node_modules/react-dom"
   }
 }
