--- a/playground/package.json
+++ b/playground/package.json
@@ -19,6 +19,8 @@
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
