--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "inhopj",
   "license": "MIT",
   "repository": "inhopj/nfc",
+  "peerDependencies": {
+    "react": "^18.2.0"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
