--- a/playground/package.json
+++ b/playground/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --hot --open"
+    "start": "webpack serve --hot --open --mode development"
   },
   "keywords": [],
   "author": "inhopj",
