--- a/playground/package.json
+++ b/playground/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --hot --open --mode development"
+    "start": "webpack serve --hot --open --mode development",
+    "build": "webpack --config webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "inhopj",
