--- a/playground/package.json
+++ b/playground/package.json
@@ -12,16 +12,19 @@
   "author": "inhopj",
   "license": "ISC",
   "dependencies": {
+    "nfc": "file:..",
     "react": "file:../node_modules/react",
-    "react-dom": "file:../node_modules/react-dom",
-    "nfc": "file:.."
+    "react-dom": "file:../node_modules/react-dom"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
