--- a/playground/package.json
+++ b/playground/package.json
@@ -22,8 +22,11 @@
     "@babel/preset-react": "^7.17.12",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.4",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
