--- a/playground/package.json
+++ b/playground/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --hot --open --mode development",
+    "start": "webpack serve --hot --open --mode=development",
     "build": "webpack --config webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "inhopj",
   "license": "ISC",
   "dependencies": {
+    "daisyui": "^2.17.0",
     "nfc": "file:..",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom"
