install material ui

--- a/playground/package.json
+++ b/playground/package.json
@@ -12,6 +12,9 @@
   "author": "inhopj",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.5",
     "nfc": "file:..",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom"
