include index.d.ts in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,7 +101,8 @@
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src"
+    "src",
+    "index.d.ts"
   ],
   "exclude": [
     "node_modules",
