--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "rollup -c -w",
-    "build": "rollup -c && tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist"
+    "build": "rollup -c && tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist --declarationMap true"
   },
   "keywords": [],
   "author": "inhopj",
