add postbuild.js into exclude array in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,6 +109,7 @@
     // TODO - decomment below line when the playground build will be setup
     "build",
     "dist",
-    "rollup.config.js"
+    "rollup.config.js",
+    "postbuild.js"
   ]
 }
