--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "rollup-step": "rollup -c",
     "tsc-step": "tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist",
     "postbuild-step": "node ./postbuild.js",
-    "publish": "npm run build && npm publish dist"
+    "publish": "npm run build && npm publish dist --access public"
   },
   "keywords": [],
   "author": "inhopj",
