--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inhopj/use-nfc",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Web-NFC api in form of a React hook",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -11,7 +11,7 @@
     "rollup-step": "rollup -c",
     "tsc-step": "tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist",
     "postbuild-step": "node ./postbuild.js",
-    "publish": "npm run build && npm publish dist --access public"
+    "publish-package": "npm run build && npm publish dist --access public"
   },
   "keywords": [],
   "author": "inhopj",
