--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inhopj/use-nfc",
+  "name": "use-nfc-hook",
   "version": "1.0.2",
   "description": "Web-NFC api in form of a React hook",
   "main": "dist/index.js",
@@ -11,8 +11,9 @@
     "rollup-step": "rollup -c",
     "tsc-step": "tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist",
     "postbuild-step": "node ./postbuild.js",
-    "publish-package": "npm run build && npm publish dist --access public"
+    "publish-package": "npm run build && npm publish --access public"
   },
+  "files": ["dist/*"],
   "keywords": [],
   "author": "inhopj",
   "license": "MIT",
