update imports again aftaer another package name change

--- a/playground/package.json
+++ b/playground/package.json
@@ -16,7 +16,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
-    "use-nfc": "file:..",
+    "use-nfc-hook": "file:..",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-router-dom": "^6.3.0"
